syntax = "proto3";

package api.customer;

//导入包
import "google/api/annotations.proto";

option go_package = "driver/api/driver;driver";

service Driver {
	//获取验证码
	rpc GetVerifiyCode(GetVerifyCodeReq) returns (GetVerifyCodeResp)  {
		option(google.api.http) = {
			get: "/drivercustome/get-verify-code/{telephone}"
		};
	}
	//用户登录
	rpc Login(LoginReq) returns (LoginResp)  {
		option(google.api.http) = {
			post: "/driver/login",
			 body: "*",
		};
	}
	//退出
	rpc Loginout(LoginoutReq) returns (LoginoutResp)  {
		option(google.api.http) = {
			get: "/driver/loginout",
		};
	}
}

message  LoginoutReq {

};

message  LoginoutResp {
	int64 code = 1;
	string message = 2;
}

//登录的消息
message LoginReq{
	string telephone = 1;
	string verify_code = 2;
};

message  LoginResp {
	int64 code = 1;
	string message = 2;
	// token登录表示，特殊字符串 jwt表示形式
	string token = 3;
	int64 token_create_at = 4;
	int32 token_life = 5;
}

//获取验证码消息
message GetVerifyCodeReq {
	string telephone = 1;
};
message GetVerifyCodeResp {
	int64 code = 1;
	string message = 2;
	string verify_code = 3;
	int64 verify_code_time = 4;
	int32 verify_code_life = 5;
};


